# apertium-monorepo-svn-82937

./: README.md
incubator/apertium-asm-ben/: AUTHORS  Makefile.am  README  apertium-asm-ben.asm-ben.dix  apertium-asm-ben.asm-ben.t1x  apertium-asm-ben.asm.dix  apertium-asm-ben.ben-asm.t1x  apertium-asm-ben.ben.dix  configure.ac  modes.xml
incubator/apertium-ces-slk/: Makefile.am  apertium-ces-slk.ces-slk.dix  apertium-ces-slk.ces-slk.t1x  apertium-ces-slk.post-slk.dix  apertium-ces-slk.slk-ces.t2x  apertium-ces-slk.slk.tsx  configure.ac  modes.xml
incubator/apertium-cv-tr/: AUTHORS  Makefile.am  README  adj_decl.txt  apertium-cv-tr.cv-tr.dix  apertium-cv-tr.cv-tr.lrx  apertium-cv-tr.cv-tr.t1x  apertium-cv-tr.cv.acx  apertium-cv-tr.tr-cv.lrx  apertium-cv-tr.tr-cv.t1x  apertium-cv-tr.tr-cv.t4x  apertium-cv-tr.tr.lexc  configure.ac  conversio.sh  cv.sh  decl.txt  gen_adj.sh  gen_noun.sh  gen_noun_list.sh  modes.xml  noms.txt  noun_decl.txt  noun_decl_wiki.txt  nova_versio.sh  pending-tests.sh  regression-tests.sh  test.sh  twolc_debug.py  verb-wiki.txt  wiki-tests.sh  wiki_noun.tmpl  wiki_verb.tmpl  write_wiki_noun.sh  write_wiki_verb.sh
incubator/apertium-deu-nld/: AUTHORS  Makefile.am  README  apertium-deu-nld.deu-nld.dix  apertium-deu-nld.deu-nld.lrx  apertium-deu-nld.deu-nld.t1x  apertium-deu-nld.deu-nld.t2x  apertium-deu-nld.deu-nld.t3x  apertium-deu-nld.nld-deu.lrx  apertium-deu-nld.nld-deu.t1x  apertium-deu-nld.nld-deu.t2x  apertium-deu-nld.nld-deu.t3x  configure.ac  modes.xml
incubator/apertium-en-it/: .gitignore  AUTHORS  Makefile.am  README  apertium-en-it.en.metadix  apertium-en-it.it.dix  apertium-en-it.it.tsx  apertium-en-it.post-it.dix  configure.ac  en-it-unsupervised.make  it-en.prob  missing-adjectives  missing-adverbs  missing-nouns  missing-verbs  modes.xml  testvoc-en-it  verblist.txt
incubator/apertium-eng-lvs/: ChangeLog  Makefile.am  README  apertium-eng-lvs.eng-lvs.dix  apertium-eng-lvs.eng.metadix  apertium-eng-lvs.lvs-eng.lrx  apertium-eng-lvs.lvs-eng.t1x  apertium-eng-lvs.lvs-eng.t3x  apertium-eng-lvs.lvs.dix  apertium-eng-lvs.lvs.tsx  configure.ac  lvs-eng-unsupervised.make  modes.xml
incubator/apertium-eng-tel/: AUTHORS  Makefile.am  apertium-eng-tel.eng-tel.dix  apertium-eng-tel.eng-tel.lrx  apertium-eng-tel.eng.dix  apertium-eng-tel.tel-eng.lrx  configure.ac  modes.xml
incubator/apertium-es-ia/: AUTHORS  Makefile.am  apertium-es-ia.es-ia.dix  apertium-es-ia.es-ia.t1x  apertium-es-ia.es.dix  apertium-es-ia.ia.dix  configure.ac  modes.xml
incubator/apertium-eus-fin/: Makefile.am  apertium-eus-fin.eus-fin.dix  apertium-eus-fin.eus-fin.lrx  apertium-eus-fin.eus-fin.t1x  apertium-eus-fin.eus-fin.t2x  configure.ac  modes.xml
incubator/apertium-fin-est/: ACKNOWLEDGEMENTS  AUTHORS  Makefile.am  README  apertium-fin-est.est-fin.lrx  apertium-fin-est.est-fin.t1x  apertium-fin-est.est-fin.t2x  apertium-fin-est.est-fin.t6x  apertium-fin-est.fin-est.dix  apertium-fin-est.fin-est.lrx  apertium-fin-est.fin-est.t1x  apertium-fin-est.fin-est.t2x  apertium-fin-est.fin-est.t3x  apertium-fin-est.fin-est.t4x  apertium-fin-est.fin-est.t5x  apertium-fin-est.fin-est.t6x  configure.ac  modes.xml  mult.py  pending-tests.sh  wiki-tests.sh
incubator/apertium-fin-hbs/: AUTHORS  Makefile.am  apertium-fin-hbs.fin-hbs.dix  apertium-fin-hbs.fin-hbs.t1x  apertium-fin-hbs.fin-hbs.t2x  configure.ac  modes.xml
incubator/apertium-fin-spa/: Makefile.am  apertium-fin-spa.fin-spa.dix  apertium-fin-spa.fin-spa.t1x  apertium-fin-spa.fin-spa.t2x  configure.ac  modes.xml
incubator/apertium-gle-eng/: Makefile.am  apertium-gle-eng.eng-gle.lrx  apertium-gle-eng.eng-gle.t1x  apertium-gle-eng.eng-gle.t2x  apertium-gle-eng.eng.dix  apertium-gle-eng.gle-eng.dix  apertium-gle-eng.gle-eng.lrx  apertium-gle-eng.gle-eng.t1x  apertium-gle-eng.gle-eng.t2x  apertium-gle-eng.gle.dix  apertium-gle-eng.pc.in  autogen.sh  configure.ac  gle-eng.prob  modes.xml
incubator/apertium-guc-spa/: Makefile.am  apertium-guc-spa.guc-spa.dix  apertium-guc-spa.guc.dix  apertium-guc-spa.spa-guc.lrx  apertium-guc-spa.spa-guc.t1x  apertium-guc-spa.spa-guc.t2x  configure.ac  modes.xml
incubator/apertium-isl-rus/: Makefile.am  apertium-isl-rus.isl-rus.dix  apertium-isl-rus.isl-rus.lrx  apertium-isl-rus.isl-rus.t1x  apertium-isl-rus.rus-isl.lrx  configure.ac  modes.xml
incubator/apertium-la-es/: AUTHORS  ChangeLog  Makefile.am  README  apertium-la-es.la-es.dix  apertium-la-es.la-es.t1x  apertium-la-es.la-es.t2x  apertium-la-es.la-es.t3x  apertium-la-es.la.acx  apertium-la-es.la.dix  apertium-la-es.la.tsx  configure.ac  la-es.prob  modes.xml
incubator/apertium-oldca-XX/: AUTHORS  Makefile.am  README  apertium-oldca-XX.oldca.dix  configure.ac  modes.xml
incubator/apertium-pl-dsb/: Makefile.am  apertium-pl-dsb.dsb.metadix  apertium-pl-dsb.pl-dsb.dix
incubator/apertium-sl-mk/: AUTHORS  Makefile.am  README  apertium-sl-mk.mk-sl.t1x  apertium-sl-mk.postprocessrules-sl-mk_2.xml  apertium-sl-mk.postprocessrules_adj_-sl-mk.xml  apertium-sl-mk.postprocessrules_adj_-sl-mk_2.xml  apertium-sl-mk.postprocessrules_adv_-mk-sl_2.xml  apertium-sl-mk.postprocessrules_n_-mk-sl.xml  apertium-sl-mk.postprocessrules_vblex_-mk-sl_2.xml  apertium-sl-mk.sl-mk.dix  apertium-sl-mk.sl-mk.rlx  apertium-sl-mk.sl-mk.t1x  apertium-sl-mk.sl.tsx  configure.ac  modes.xml  pending-tests.sh  sl-mk-supervised.make  sl-mk.prob
incubator/apertium-slv-ita/: AUTHORS  Makefile.am  README  apertium-slv-ita.slv-ita.dix  apertium-slv-ita.slv-ita.t1x  configure.ac  modes.xml  pending-tests.sh  wiki-tests.sh
incubator/apertium-tat-eng/: Makefile.am  README  apertium-tat-eng.tat-eng.dix  apertium-tat-eng.tat-eng.t1x  apertium-tat-eng.tat-eng.t2x  apertium-tat-eng.tat-eng.t3x  configure.ac  line  modes.xml  update-memory.bash
incubator/apertium-tur-fin/: :wn  ACKNOWLEDGEMENTS  AUTHORS  Makefile.am  apertium-tur-fin.fin-tur.lrx  apertium-tur-fin.fin-tur.t1x  apertium-tur-fin.fin-tur.t3x  apertium-tur-fin.tur-fin.dix  apertium-tur-fin.tur-fin.lrx  apertium-tur-fin.tur-fin.t1x  apertium-tur-fin.tur-fin.t2x  autogen.sh  configure.ac  modes.xml
(+6341 files in other folders)
